[package]
name = "media-probe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
which = "4.0.2"
clap = { version = "4.0.29", features = ["derive"] }
log = "0.4.17"
env_logger = "0.10.0"
walkdir = "2.3.2"
serde_json = "1.0.70"
csv = "1.1.6"
serde = { version = "1.0.130", features = ["derive"] }
chrono = "0.4.19"